modules/gdscript/tests/scripts/analyzer/errors/struct_invalid_member.gd
struct MyStruct:
	var a: int

func test():
	var my_struct: MyStruct = MyStruct()
	print(my_struct.b)
